--- a/templates/lending_page.html
+++ b/templates/lending_page.html
@@ -97,7 +97,8 @@
 
             <p>Are you ready to study?</p>
             <div class="cta-section">
-                <a href="{% url 'login' %}" class="cta-button">Start</a>
+                <a href="{% url 'register' %}" class="cta-button">Sign up</a>
+                <a href="{% url 'login' %}" class="cta-button">Sign in</a>
             </div>
         </div>
     </body>
