--- a/templates/registration/password_reset_done.html
+++ b/templates/registration/password_reset_done.html
@@ -2,9 +2,29 @@
 {% load i18n %}
 
 {% block content %}
+    <style>
+        /* Идеальный стиль для страницы с инструкциями по смене пароля */
+        body {
+            background: #FDFDFD;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            min-height: 100vh;
+            margin: 0;
+            color: #333; /* Темно-серый цвет текста */
+            font-family: Arial, sans-serif;
+        }
 
-<p>{% translate 'We’ve emailed you instructions for setting your password, if an account exists with the email you entered. You should receive them shortly.' %}</p>
+        p {
+            font-size: 16px;
+            margin-bottom: 20px;
+            color: #000; /* Чёрный цвет текста */
+            text-align: center; /* Выравнивание текста по центру */
+        }
+    </style>
 
-<p>{% translate 'If you don’t receive an email, please make sure you’ve entered the address you registered with, and check your spam folder.' %}</p>
+    <p>{% translate 'We’ve emailed you instructions for setting your password, if an account exists with the email you entered. You should receive them shortly.' %}</p>
 
+    <p>{% translate 'If you don’t receive an email, please make sure you’ve entered the address you registered with, and check your spam folder.' %}</p>
 {% endblock %}
