--- a/templates/main_app/set/set_crud/delete_set_confirm.html
+++ b/templates/main_app/set/set_crud/delete_set_confirm.html
@@ -1,7 +1,7 @@
 {% extends 'base_generic.html' %}
 
 {% block title %}
-    Delete set confirm
+    Confirm Set Deletion
 {% endblock %}
 
 {% block header %}
@@ -9,9 +9,69 @@
 {% endblock %}
 
 {% block content %}
+    <style>
+        /* Идеальный стиль для страницы подтверждения удаления набора */
+        body {
+            background: #FDFDFD;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            min-height: 100vh;
+            margin: 0;
+            color: #333; /* Темно-серый цвет текста */
+            font-family: Arial, sans-serif;
+        }
 
-    Do you want to delete set "{{set.name}}"?
-    <button><a href="{% url 'delete_set' set.slug %}">Delete</a></button>
-    <button><a href="{% url 'set' set.slug %}">Cancel</a></button>
+        content-container {
+            width: 80%;
+            max-width: 600px;
+            text-align: center;
+        }
 
+        h2 {
+            font-size: 30px;
+            margin-bottom: 20px;
+            color: #FF6347; /* Красный цвет для заголовка */
+        }
+
+        p {
+            font-size: 16px;
+            margin-bottom: 20px;
+        }
+
+        button, button a {
+            padding: 10px 20px;
+            background-color: #FF6347; /* Красный цвет для кнопки */
+            color: #FFF;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            margin-top: 10px;
+            transition: background 0.3s;
+            display: inline-block;
+            text-decoration: none;
+        }
+
+        button:hover, button a:hover {
+            background-color: #DB4437; /* Тёмно-красный цвет при наведении */
+        }
+
+        a {
+            margin-top: 10px;
+            font-size: 16px;
+            color: #007AFF; /* Синий цвет для ссылки */
+            text-decoration: none;
+            display: inline-block;
+            margin-left: 10px;
+        }
+    </style>
+
+    <div class="content-container">
+        <h2>Confirm Set Deletion</h2>
+        <p>Do you want to delete set "{{set.name}}"?</p>
+
+        <button><a href="{% url 'delete_set' set.slug %}">Delete</a></button>
+        <button><a href="{% url 'set' set.slug %}">Cancel</a></button>
+    </div>
 {% endblock %}
