--- a/templates/main_app/set/share_set/share_set_success.html
+++ b/templates/main_app/set/share_set/share_set_success.html
@@ -1,14 +1,42 @@
 {% extends 'base_generic.html' %}
 
-{% block title %}Share set success{% endblock %}
+{% block title %}
+    Share Set Success
+{% endblock %}
 
 {% block header %}
     {% include 'header.html' %}
 {% endblock %}
 
 {% block content %}
+    <style>
+        /* Идеальный стиль для страницы успешной публикации (шаринга) набора */
+        body {
+            background: #FDFDFD;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            min-height: 100vh;
+            margin: 0;
+            color: #333; /* Темно-серый цвет текста */
+            font-family: Arial, sans-serif;
+        }
 
-    Set was shared successfully
-    <p><a href="{% url 'set' set_slug %}">Return to set</a></p>
+        p {
+            font-size: 16px;
+            margin-top: 20px;
+        }
 
+        a {
+            color: #007AFF; /* Синий цвет для ссылки */
+            text-decoration: none;
+            font-size: 16px;
+        }
+    </style>
+
+    <div>
+        <p>Set was shared successfully</p>
+        <p><a href="{% url 'set' set_slug %}">Return to Set</a></p>
+    </div>
 {% endblock %}
