--- a/templates/registration/password_reset_complete.html
+++ b/templates/registration/password_reset_complete.html
@@ -1,8 +1,45 @@
 {% extends 'base_generic.html' %}
 
 {% block content %}
-<h1>Password successfully changed</h1>
+    <style>
+        /* Идеальный стиль для страницы успешной смены пароля */
+        body {
+            background: #FDFDFD;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            min-height: 100vh;
+            margin: 0;
+            color: #333; /* Темно-серый цвет текста */
+            font-family: Arial, sans-serif;
+        }
 
-<p><a href="{% url 'login' %}">Login</a></p>
+        h1 {
+            font-size: 30px;
+            margin-bottom: 20px;
+            color: #000; /* Чёрный цвет для заголовка */
+        }
 
+        button {
+            padding: 10px 20px;
+            background-color: #007AFF; /* Синий цвет для кнопки */
+            color: #FFF; /* Белый цвет текста */
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background 0.3s;
+            font-size: 16px;
+            text-decoration: none; /* Убрано подчеркивание ссылки */
+            margin-top: 10px; /* Добавлен отступ сверху */
+            display: inline-block; /* Добавлено свойство для блочного отображения кнопки */
+        }
+
+        button:hover {
+            background-color: #0056b3; /* Тёмно-синий цвет при наведении */
+        }
+    </style>
+
+    <h1>Password successfully changed</h1>
+    <button><a href="{% url 'login' %}" style="text-decoration: none; color: #FFF;">Login</a></button>
 {% endblock %}
