--- a/templates/user/change_password.html
+++ b/templates/user/change_password.html
@@ -1,17 +1,79 @@
 {% extends 'base_generic.html' %}
 
-{% block title %}Change password{% endblock %}
+{% block title %}
+    Change Password
+{% endblock %}
 
 {% block header %}
     {% include 'header.html' %}
 {% endblock %}
 
 {% block content %}
+    <style>
+        /* Идеальный стиль для страницы смены пароля */
+        body {
+            background: #FDFDFD;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            min-height: 100vh;
+            margin: 0;
+            color: #333; /* Темно-серый цвет текста */
+            font-family: Arial, sans-serif;
+        }
+
+        h2 {
+            font-size: 30px;
+            margin-bottom: 20px;
+            color: #007AFF; /* Синий цвет для заголовка */
+        }
+
+        form {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            margin-top: 20px;
+            max-width: 300px; /* Ограничение ширины формы */
+            width: 100%;
+        }
+
+        label {
+            margin-bottom: 10px;
+            font-size: 16px;
+            color: #333; /* Темно-серый цвет текста */
+        }
+
+        input {
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 15px;
+            border: 1px solid #CCC;
+            border-radius: 5px;
+            box-sizing: border-box;
+        }
+
+        button {
+            padding: 10px 20px;
+            background-color: #007AFF; /* Синий цвет для кнопки */
+            color: #FFF; /* Белый цвет текста */
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background 0.3s;
+            margin-top: 15px; /* Добавлен отступ сверху для кнопки */
+        }
+
+        button:hover {
+            background-color: #0056b3; /* Тёмно-синий цвет при наведении */
+        }
+    </style>
+
     <h2>Change Password</h2>
-      <form method="post">
+
+    <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit">Change Password</button>
-      </form>
-
+    </form>
 {% endblock %}
